Can not create a rule for virtual host mapping on Windows OS #149